Construct URLs passed via cmdline args using QUrl::fromUserInput()

Otherwise user will have to type "dolphin file:///tmp" instead of
"dolphin /tmp"

REVIEW: 122475
BUG: 343906